Update Twitter Image and Video download.ipynb

--- a/Twitter Image and Video download.ipynb
+++ b/Twitter Image and Video download.ipynb
@@ -98,7 +98,7 @@
     "for a in range(0,len(vid),4): \n",
     "    q+=1\n",
     "    print(\"Number\",q,\":\",vid[a])\n",
-    "    test.write(\"%\\n\"\"第 {} 張: {} \\n\".format(q,dicts[\"url\"])) \n",
+    "    test.write(\"%\\n\"\"picture# {} : {} \\n\".format(q,dicts[\"url\"])) \n",
     "    #vid=requests.get(dicts[\"url\"])\n",
     "    #vid2 = vid.content\n",
     "    #vid_out = open(\"/Users/danies/Desktop/untitled folder/\"+str(q)+\".mp4\",'wb')\n",
@@ -126,8 +126,8 @@
     "\n",
     "import io\n",
     "from PIL import Image\n",
-    "j=0 #為了印頁數\n",
-    "q=0 #為了印張數 \n",
+    "j=0 #showing page number\n",
+    "q=0 #showing picture number \n",
     "tweets = tweepy.Cursor(api.user_timeline,id=username).items(count)\n",
     "test = open(\"the directory you want to save image\",\"w\",encoding='UTF-8')\n",
     "\n",
@@ -139,8 +139,8 @@
     "            for t, s in x.items() :\n",
     "                if str(s).startswith(\"https://\") and str(s).endswith(\".jpg\"):\n",
     "                    q+=1\n",
-    "                    print(\"第\",q,\"張:\",s)\n",
-    "                    test.write(\"%\\n\"\"第 {} 張: {} \\n\".format(q,s)) \n",
+    "                    print(\"Image Number\",q,\"\",s)\n",
+    "                    test.write(\"%\\n\"\"Image Number{} : {} \\n\".format(q,s)) \n",
     "                    pic=requests.get(s)\n",
     "                    img2 = pic.content\n",
     "                    \n",
